--- a/main.html
+++ b/main.html
@@ -22,12 +22,15 @@
 
     <div class="pictorial-news-section">
         <h2>Pictorial News</h2>
+        <h3>Image One</h3>
         <div class="news-image">
             <img src="https://images.hindustantimes.com/img/2023/01/29/550x309/delhi_rains_1674974112847_1674981888135_1674981888135.jpeg" alt="News Image One">
         </div>
+        <h3>Image Two</h3>
         <div class="news-image">
             <img src="https://images.hindustantimes.com/img/2023/01/29/550x309/ADANI-INDIA-GAUTAM-ADANI-0_1675011651023_1675011651023_1675011672003_1675011672003.JPG" alt="News Image Two">
         </div>
+        <h3>Image Three</h3>
         <div class="news-image">
             <img src="https://images.hindustantimes.com/img/2023/01/29/550x309/FRANCE-REFORM-PENSIONS-31_1675022359706_1675022359706_1675022383851_1675022383851.JPG" alt="News Image Three">
         </div>
