--- a/main.html
+++ b/main.html
@@ -8,21 +8,31 @@
 
 <body>
 	<header class="header">
-        <h1>News Website</h1>
+        <h2>News Website</h2>
     </header>
 
-    <div class="latest-news-section">
-        <h2>Latest News</h2>
+	<div class="grid-container">
+		<div class="grid-item">
+			<div class="latest-news-section">
+        <h3>Latest News</h3>
         <ul>
             <li><a href="#">Breaking News: New Technology Breakthrough!</a></li>
             <li><a href="#">Weather Update: Severe Storm Expected Tomorrow</a></li>
             <li><a href="#">Sports: Local Team Wins Championship</a></li>
         </ul>
     </div>
-
-    <div class="pictorial-news-section">
-        <h2>Pictorial News</h2>
-        <h3>Image One</h3>
+		</div>
+		<div class="grid-item">
+			<div class="latest-news-section">
+        <h3>Main Article</h3>
+        <p>The FCA has expanded its probe into workplace harassment and 
+			bullying within the financial sector. Engaging with multiple 
+			banks and insurers, the regulator seeks to address non-financial misconduct following a rise in reported cases. While no enforcement actions have been initiated, the FCA emphasizes its commitment to upholding firm culture and handling misconduct appropriately.</p>
+    </div>
+		</div>
+		<div class="grid-item">
+			 <div class="pictorial-news-section">
+        <h3>Pictorial News</h3>
         <div class="news-image">
             <img src="https://images.hindustantimes.com/img/2023/01/29/550x309/delhi_rains_1674974112847_1674981888135_1674981888135.jpeg" alt="News Image One">
         </div>
@@ -35,6 +45,12 @@
             <img src="https://images.hindustantimes.com/img/2023/01/29/550x309/FRANCE-REFORM-PENSIONS-31_1675022359706_1675022359706_1675022383851_1675022383851.JPG" alt="News Image Three">
         </div>
     </div>
+		</div>
+	</div>
+
+    
+
+   
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
